<resources>
    <string name="app_name">Hospital</string>
    <string name="code">请输入工号</string>
    <string name="password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="admin">管理员</string>
    <string name="forget">忘记密码？</string>
    <string name="zhuce">新用户注册</string>
    <!--//-->
    <string name="register">注 册</string>
    <string name="user_name">用户名/工号</string>
    <string name="psw">密码</string>
    <string name="psw_again">再次输入密码</string>

    <!--//-->
    <string name="tui_chu">退出登陆</string>
    <string name="my_message">我的信息</string>
    <string name="change_psw">修改密码</string>
    <string name="my_order">预约状态</string>
    <string name="bf_order">病房预约</string>
    <string name="bf_see">查看病房</string>

    <!--//-->
    <string name="create_database">Create database</string>
    <string name="add_database">添加数据</string>

    <!--//change-->
    <string name="xiu_gai">确认修改</string>
    <string name="new_psw_again">再次输入新密码</string>
    <string name="new_psw">输入新密码</string>

    <!--//my message-->

    <string name="xiu_gai_message">修改信息</string>
    <string name="mymess">我的信息</string>

    <string name="sr">生日：</string>
    <string name="zc">职称：</string>
    <string name="ks">科室：</string>
    <string name="nl">年龄：</string>
    <string name="dh">电话：</string>
    <string name="xb">性别：</string>
    <string name="nm">姓名：</string>
    <string name="gh">工号：</string>
    <!--//admin-->
    <string name="doctor_message">医生信息</string>
    <string name="ward_message">病房信息</string>
    <string name="ward_order_message">预约信息</string>
    <string name="worker_loading_message">登陆资料</string>
    <string name="change_admin_password">修改密码</string>
    <string name="admin_tuichu">退出</string>
    <!--//预约状态-->
    <string name="nysid">医生工号</string>
    <string name="bfid">病房号</string>
    <string name="sj">预约时间</string>
    <string name="yyzt">预约状态</string>
    <string name="todo">TODO</string>
    <string name="xq">详情</string>
    <string name="rem">记住密码</string>

    <!--/修改自己信息-->

    <string name="xiu_gai_queren">确认修改</string>
    <string name="shuaxin">刷新</string>


    <!--//-->
    <string name="yy">预约</string>
    <string name="etSearch">Searching...</string>
    <string name="ward_depart">科室</string>
    <string name="sy">是否使用</string>
    <string name="sfyy">是否可预约</string>
    <string name="ysxx">医生信息</string>
    <string name="adddoctor">确认添加</string>
    <string name="bfxx">病房信息</string>
    <string name="bfid2">病房ID</string>
    <string name="warddepart">科室：</string>
    <string name="shifoushiyong">是否使用：</string>
    <string name="bednumber">床位数：</string>
    <string name="shengyubed">剩余床位数：</string>
    <string name="shifoukeyuyue">是否可预约：</string>
    <string name="zzr">责任人ID：</string>
    <string name="yyxxxxxx">预约信息</string>
    <string name="rem_pw">记住密码</string>
    <string name="rempass">记住密码</string>


</resources>
