<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nysid"
            android:layout_width="86dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/nysid"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bfid"
            android:layout_width="77dp"
            android:layout_height="40sp"

            android:gravity="center"
            android:text="@string/bfid"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sj"
            android:layout_width="90dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/sj"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yyzt"
            android:layout_width="82dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/yyzt"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>



