<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WatchingWardActivity" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bfid"
            android:layout_width="83dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/bfid"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/ward_depart"
            android:layout_width="64dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/ward_depart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sy"
            android:layout_width="77dp"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/sy"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/ssyy"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:gravity="center"
            android:text="@string/sfyy"
            android:textStyle="bold" />





    </LinearLayout>


    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF">

        <RelativeLayout
            android:id="@+id/rlSearchFrameDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"

                android:paddingStart="20dp"
                android:hint="@string/etSearch"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/xx"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="#ffffff"
                android:paddingEnd="80dp"
                android:visibility="visible"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                />

        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
   <ListView
       android:id="@android:id/list"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   </ListView>
    </LinearLayout>


</LinearLayout>